import configureMockStore from 'redux-mock-store';
import thunk from 'redux-thunk';

import * as actions from './actions';

import {destinationTypes} from './constants';

const middlewares = [thunk];
const mockStore = configureMockStore(middlewares);

let mockSpark;

describe('widget-space redux actions', () => {
  beforeEach(() => {
    mockSpark = {
      request: jest.fn(() => Promise.resolve({body: 'mocked response body'}))
    };
  });

  it('has exported actions', () => {
    expect(actions).toMatchSnapshot();
  });

  describe('basic actions', () => {
    describe('#reloadWidget', () => {
      it('should reload the widget', () => {
        const store = mockStore({});

        store.dispatch(actions.reloadWidget());
        expect(store.getActions()).toMatchSnapshot();
      });
    });

    describe('#storeActivityTypes', () => {
      it('should store the activity types', () => {
        const store = mockStore({});

        store.dispatch(actions.storeActivityTypes({activityTypes: []}));
        expect(store.getActions()).toMatchSnapshot();
      });
    });

    describe('#storeDestination', () => {
      it('should store the destination type and id', () => {
        const store = mockStore({});

        store.dispatch(actions.storeDestination({id: 'you@u.net', type: 'email'}));
        expect(store.getActions()).toMatchSnapshot();
      });
    });

    describe('#toggleActivityMenuVisible', () => {
      it('should toggle the activity menu visible', () => {
        const store = mockStore({});

        store.dispatch(actions.toggleActivityMenuVisible());
        expect(store.getActions()).toMatchSnapshot();
      });
    });

    describe('#updateActivityType', () => {
      it('should update an activity type', () => {
        const store = mockStore({});

        store.dispatch(actions.updateActivityType({type: 'my-activity'}));
        expect(store.getActions()).toMatchSnapshot();
      });
    });

    describe('#updateSecondaryActivityType', () => {
      it('should update a secondary activity type', () => {
        const store = mockStore({});

        store.dispatch(actions.updateSecondaryActivityType({type: 'my-activity'}));
        expect(store.getActions()).toMatchSnapshot();
      });
    });

    describe('#updateWidgetStatus', () => {
      it('should store the activity types', () => {
        const store = mockStore({});

        store.dispatch(actions.updateWidgetStatus({status: {mocked: true}}));
        expect(store.getActions()).toMatchSnapshot();
      });
    });
  });

  describe('thunked actions', () => {
    const mockIntl = {formatMessage: () => 'mockIntl'};

    describe('#getSpaceDetails', () => {
      it('should fetch and store details about a space', () => {
        const destinationId = 'f17f413a-8530-4d08-ac9a-ca416d46988b';
        const store = mockStore({});

        return store.dispatch(actions.getSpaceDetails({
          sparkInstance: mockSpark,
          destinationId,
          destinationType: destinationTypes.SPACEID,
          intl: mockIntl
        }))
          .then(() => {
            expect(store.getActions()).toMatchSnapshot();
          });
      });

      it('should not fetch details about direct email spaces', () => {
        const destinationId = 'email@net.net';
        const store = mockStore({});

        store.dispatch(actions.getSpaceDetails({
          sparkInstance: mockSpark,
          destinationId,
          destinationType: destinationTypes.EMAIL,
          intl: mockIntl
        }));
        expect(store.getActions()).toMatchSnapshot();
      });
    });
  });
});
